--- a/main.ui
+++ b/main.ui
@@ -74,6 +74,11 @@
     </disabled>
    </palette>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>12</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Kanbaner</string>
   </property>
@@ -89,7 +94,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -394,7 +399,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -404,15 +409,15 @@
    <widget class="QPushButton" name="pb_graph">
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>250</x>
       <y>10</y>
-      <width>261</width>
+      <width>311</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -422,8 +427,8 @@
    <widget class="QLineEdit" name="le_login">
     <property name="geometry">
      <rect>
-      <x>1000</x>
-      <y>16</y>
+      <x>1002</x>
+      <y>15</y>
       <width>181</width>
       <height>41</height>
      </rect>
@@ -434,25 +439,7 @@
      </font>
     </property>
     <property name="placeholderText">
-     <string>введите логин</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>920</x>
-      <y>20</y>
-      <width>71</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string/>
+     <string>Введите логин</string>
     </property>
    </widget>
   </widget>
