--- a/main.ui
+++ b/main.ui
@@ -331,6 +331,13 @@
       <height>601</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
    </widget>
    <widget class="QPushButton" name="pb_open">
     <property name="geometry">
