--- a/tasks.ui
+++ b/tasks.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1133</width>
-    <height>837</height>
+    <height>722</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -37,8 +37,8 @@
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>760</y>
+     <x>10</x>
+     <y>800</y>
      <width>1109</width>
      <height>42</height>
     </rect>
@@ -121,6 +121,36 @@
         <width>0</width>
         <height>40</height>
        </size>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="horizontalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>720</y>
+     <width>1121</width>
+     <height>82</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <widget class="QPushButton" name="pb_addT">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>80</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Добавить задачу</string>
       </property>
      </widget>
     </item>
