--- a/finance.ui
+++ b/finance.ui
@@ -28,6 +28,9 @@
    <property name="mouseTracking">
     <bool>true</bool>
    </property>
+   <property name="dragEnabled">
+    <bool>false</bool>
+   </property>
    <property name="sortingEnabled">
     <bool>true</bool>
    </property>
@@ -36,9 +39,19 @@
      <string>1</string>
     </property>
    </row>
+   <row>
+    <property name="text">
+     <string>2</string>
+    </property>
+   </row>
    <column>
     <property name="text">
      <string>Фамилия, имя</string>
+    </property>
+    <property name="font">
+     <font>
+      <italic>false</italic>
+     </font>
     </property>
    </column>
    <column>
@@ -50,7 +63,47 @@
     <property name="text">
      <string>Сумма</string>
     </property>
+    <property name="font">
+     <font>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <underline>false</underline>
+     </font>
+    </property>
+    <property name="foreground">
+     <brush brushstyle="SolidPattern">
+      <color alpha="255">
+       <red>0</red>
+       <green>150</green>
+       <blue>0</blue>
+      </color>
+     </brush>
+    </property>
    </column>
+   <item row="0" column="2">
+    <property name="text">
+     <string/>
+    </property>
+    <property name="background">
+     <brush brushstyle="SolidPattern">
+      <color alpha="255">
+       <red>0</red>
+       <green>150</green>
+       <blue>0</blue>
+      </color>
+     </brush>
+    </property>
+    <property name="foreground">
+     <brush brushstyle="SolidPattern">
+      <color alpha="255">
+       <red>0</red>
+       <green>150</green>
+       <blue>0</blue>
+      </color>
+     </brush>
+    </property>
+   </item>
   </widget>
  </widget>
  <resources/>
