--- a/finance.ui
+++ b/finance.ui
@@ -31,6 +31,9 @@
    <property name="dragEnabled">
     <bool>false</bool>
    </property>
+   <property name="alternatingRowColors">
+    <bool>true</bool>
+   </property>
    <property name="sortingEnabled">
     <bool>true</bool>
    </property>
@@ -86,7 +89,7 @@
      <string/>
     </property>
     <property name="background">
-     <brush brushstyle="SolidPattern">
+     <brush brushstyle="NoBrush">
       <color alpha="255">
        <red>0</red>
        <green>150</green>
