--- a/tasks.ui
+++ b/tasks.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1140</width>
-    <height>802</height>
+    <width>1142</width>
+    <height>850</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,19 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTabWidget" name="tabWidget">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="font">
       <font>
        <pointsize>12</pointsize>
       </font>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
      </property>
      <property name="currentIndex">
       <number>-1</number>
@@ -34,7 +43,7 @@
      <property name="minimumSize">
       <size>
        <width>1120</width>
-       <height>80</height>
+       <height>65</height>
       </size>
      </property>
      <property name="font">
@@ -44,6 +53,30 @@
      </property>
      <property name="text">
       <string>Добавить задачу</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="pb_reboot">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>65</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Обновить</string>
      </property>
     </widget>
    </item>
