Работа над задачами

--- a/create.ui
+++ b/create.ui
@@ -112,7 +112,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Введите название канбан доски</string>
+        <string>Введите название канбан-доски</string>
        </property>
       </widget>
      </item>
