--- a/finance.ui
+++ b/finance.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>732</width>
+    <width>499</width>
     <height>570</height>
    </rect>
   </property>
@@ -31,6 +31,9 @@
      <property name="sortingEnabled">
       <bool>true</bool>
      </property>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>150</number>
+     </attribute>
      <row>
       <property name="text">
        <string>1</string>
