--- a/finance.ui
+++ b/finance.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>499</width>
+    <width>683</width>
     <height>570</height>
    </rect>
   </property>
@@ -61,6 +61,11 @@
      </column>
      <column>
       <property name="text">
+       <string>Дата</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>Сумма</string>
       </property>
       <property name="font">
@@ -81,7 +86,7 @@
        </brush>
       </property>
      </column>
-     <item row="0" column="2">
+     <item row="0" column="3">
       <property name="text">
        <string/>
       </property>
